Wrote basic cmd interface

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "code"
   ],
   "author": "king525dev",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
